2009-09-16  Brad Taylor  <brad@getcoded.net>

	* AutomationSingleton.cs: Query AccessibilityEnabled later in the init
	process so that the value is set.
	
	r: toshok

2009-09-10  Mario Carrion  <mcarrion@novell.com>

	* RangeBaseAutomationPeer.cs: Using RangeBase.UIAPropertyChanged to
	raise RangeValue Pattern events.
	* ProgressBarAutomationPeer.cs: New file.

2009-09-09  Mario Carrion  <mcarrion@novell.com>

	* ButtonAutomationPeer.cs: Throwing ElementNotEnabledException when
	not enabled.

	r: toshok

2009-09-08  Mario Carrion  <mcarrion@novell.com>

	* RepeatButtonAutomationPeer.cs: Raising InvokePatternOnInvoked. 
	IInvokeProvider.Invoke implementation.
	* HyperlinkButtonAutomationPeer.cs: Throwing ElementNotEnabledException
	when not enabled.

	r: spouliot

2009-09-08  Mario Carrion  <mcarrion@novell.com>

	* ComboBoxAutomationPeer.cs: New file.
	* ItemsControlAutomationPeer.cs: Moved ChildrenCore content to
	GetChildrenCore, no need to use ChildrenCore.
	* FrameworkElementAutomationPeer.cs: Catching exception when calling
	TransformToVisual.

	r: toshok

2009-09-03  Mario Carrion  <mcarrion@novell.com>

	* ItemAutomationPeer.cs: New internal properties: RealItem and 
	RealItemsControlAutomationPeer.
	* SelectorAutomationPeer.cs: Raising Selection and SelectionItem events.
	Fixed GetSelectedAutomationPeer. Property overridden:
	ScrollPatternImplementor
	* ItemsControlAutomationPeer.cs: ChildrenCore returns only ListBoxItems:
	ItemsControl.Items. New virtual property ScrollPatternImplementor.
	* SelectorItemAutomationPeer.cs: Now keeping a local copy of parent: 
	selector. Raising SelectionItem events. Property overridden: 
	RealItemsControlAutomationPeer.

	r: alan

2009-08-28  Mario Carrion  <mcarrion@novell.com>

	* SelectorItemAutomationPeer.cs: New property SelectionProvider. Fixed
	SelectionItemProvider implementation.

	r: alan

2009-08-25  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* HyperlinkButtonAutomationPeer.cs: Final implementation of